--- a/codigo/Sprint2e3Sofia/json-server/package.json
+++ b/codigo/Sprint2e3Sofia/json-server/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "json-server",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "dependencies": {
+    "express": "^4.19.2",
+    "json-server": "^1.0.0-beta.1",
+    "multer": "^1.4.5-lts.1"
   },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "scripts": {
+  "start": "concurrently \"json-server --watch db.json --port 3001\" \"node formServer.js\""
+},
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  }
 }
