--- a/codigo/Sprint2e3Sofia/json-server/package.json
+++ b/codigo/Sprint2e3Sofia/json-server/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "json-server": "^1.0.0-beta.1",
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-  "start": "concurrently \"json-server --watch db.json --port 3001\" \"node formServer.js\""
-},
+    "start": "concurrently \"json-server --watch db.json --port 3001\" \"node formServer.js\""
+  },
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
